--- a/pages/aboutMe/assets/css/style.css
+++ b/pages/aboutMe/assets/css/style.css
@@ -24,7 +24,7 @@ section {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background: #fff;
+    background: #ffffff;
     position: relative;
 }
 
@@ -208,7 +208,6 @@ nav ul li a {
 
 /*-----------------------*/
 
-
 .container1 {
     position: relative;
     max-width: 100%;
@@ -252,6 +251,7 @@ nav ul li a {
     background: rgb(226, 226, 226);
     animation: progress 0.4s ease-in-out forwards;
     opacity: 0;
+    transition: transform 0.3s ease-in-out;
   }
 
   .skill-per.html {
@@ -325,7 +325,10 @@ nav ul li a {
     background-color: rgb(226, 226, 226);
     transform: translateX(-50%) rotate(45deg);
   }
-  
+
+  .skill-per:hover {
+    transform: scale(1.25);
+}
 
 /*----------------------------------------------------------------------*/
 footer {
